--- a/EXPRESSBACKEND/.envsample
+++ b/EXPRESSBACKEND/.envsample
@@ -5,3 +5,4 @@ PORT=       #port number
 GLOBALSALT= #salt for password hashing
 JWTSECRET=  #secret for jwt token
 JWT_EXPIRATION_TIME=      #this is in minutes
+FINEPERDAY =  #this is in rupees
